crates/keron-lang/tests/corpus/errors/check/resource_does_not_narrow.keron

val r: Resource = symlink(from = "a", to = "b")
val s: Symlink = r
